--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University of Central Florida<br>ICCV 2025</span>
+                    <span class="author-block"><sup>1</sup>University of Central Florida<br>VISION'25 Workshop - ICCVW 25</span>
                   </div>
 
                   <div class="column has-text-centered">
