--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://raiyaan.xyz/" target="_blank">Raiyaan Abdullah</a><sup>1</sup>,</span>
+                <a href="https://raiyaan.xyz/" target="_blank">Raiyaan Abdullah</a>,</span>
                 <span class="author-block">
-                  <a href="https://www.crcv.ucf.edu/person/rawat/" target="_blank">Yogesh Singh Rawat</a><sup>1</sup>,</span>
+                  <a href="https://www.crcv.ucf.edu/person/rawat/" target="_blank">Yogesh Singh Rawat</a>,</span>
                   <span class="author-block">
-                    <a href="https://mse.ucf.edu/person/shrutivyas/" target="_blank">Shruti Vyas</a><sup>1</sup>,</span>
+                    <a href="https://mse.ucf.edu/person/shrutivyas/" target="_blank">Shruti Vyas</a>,</span>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University of Central Florida<br>VISION'25 Workshop - ICCVW 25</span>
+                    <span class="author-block">University of Central Florida<br>VISION'25 Workshop - ICCVW 25</span>
                   </div>
 
                   <div class="column has-text-centered">
