--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
+  <meta name="description" content="A video-language benchmark for safety in industrial environment">
+  <meta property="og:title" content="iSafety-Bench"/>
+  <meta property="og:description" content="A video-language benchmark for safety in industrial environment"/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
@@ -14,8 +14,8 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
+  <meta name="twitter:title" content="iSafety-Bench">
+  <meta name="twitter:description" content="A video-language benchmark for safety in industrial environment">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
   <meta name="twitter:card" content="summary_large_image">
@@ -60,7 +60,7 @@
                 <span class="author-block">
                   <a href="https://www.crcv.ucf.edu/person/rawat/" target="_blank">Yogesh Singh Rawat</a>,</span>
                   <span class="author-block">
-                    <a href="https://mse.ucf.edu/person/shrutivyas/" target="_blank">Shruti Vyas</a>,</span>
+                    <a href="https://mse.ucf.edu/person/shrutivyas/" target="_blank">Shruti Vyas</a></span>
                   </span>
                   </div>
 
@@ -72,18 +72,18 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="" target="_blank"
+                        <a href="https://arxiv.org/abs/2508.00399" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper (Coming Soon)</span>
+                        <span>Paper</span>
                       </a>
                     </span>
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/raiyaan-abdullah/iSafety-Bench" target="_blank"
+                    <a href="https://github.com/iSafetyBench/data" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
