--- a/index.html
+++ b/index.html
@@ -158,10 +158,8 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body" style="text-align: center;">
-      <img src="static/images/model_scores2.png" alt="MY ALT TEXT"/>
-      <h4 class="subtitle has-text-centered">
-        Performance comparison of models
-      </h4>
+      <h2 class="title has-text-centered">Performance comparison of models</h2>
+      <img src="static/images/model_scores2.png" alt=""/>
     </div>
   </div>
 </section>
@@ -188,7 +186,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <h2 class="subtitle has-text-centered">Comparison with existing datasets</h2>
+      <h2 class="title has-text-centered">Comparison with existing datasets</h2>
       <div class="content">
         <table class="table is-bordered is-striped is-narrow is-hoverable">
           <thead>
