--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">University of Central Florida<br>VISION'25 Workshop - ICCVW 25</span>
+              <span class="author-block">University of Central Florida<br>VISION'25 Workshop - ICCVW '25</span>
             </div>
 
             <div class="column has-text-centered">
