--- a/index.html
+++ b/index.html
@@ -310,14 +310,14 @@
       <h2 class="title">BibTeX</h2>
       <pre>
         <code>
-        @InProceedings{Abdullah_2025_ICCV,
-            author    = {Abdullah, Raiyaan and Rawat, Yogesh Singh and Vyas, Shruti},
-            title     = {iSafetyBench: A video-language benchmark for safety in industrial environment},
-            booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
-            month     = {October},
-            year      = {2025},
-            pages     = {}
-        }
+          @InProceedings{Abdullah_2025_ICCV,
+              author    = {Abdullah, Raiyaan and Rawat, Yogesh Singh and Vyas, Shruti},
+              title     = {iSafetyBench: A video-language benchmark for safety in industrial environment},
+              booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+              month     = {October},
+              year      = {2025},
+              pages     = {1433-1442}
+          }
         </code>
       </pre>
     </div>
